# pySigma-backend-kusto

./: README.md  pyproject.toml
.github/workflows/: test.yml
sigma/backends/kusto/: kusto.py
sigma/pipelines/kusto/: __init__.py  kusto.py
tests/: test_backend_kusto.py  test_pipelines_kusto.py
