[tool.poetry]
name = "pySigma-backend-kusto"
version = "0.1.0"
description = "pySigma Kusto Backend"
authors = ["DenizenB <github@podd.xyz>"]
license = "MIT"
repository = "https://github.com/DenizenB/pySigma-backend-kusto"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.10.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
